k8s/products.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      name: products-pod
      labels:
        app: products-service
    spec:
      containers:
      - name: products-container
        image: busybox
